# atlas-elenchus

./: .env.example  .gitignore  LICENSE.md  README.md  elenchus.py  pyproject.toml
architecture/: ARCHITECTURE.md
docs/plans/: 2026-03-13-resilient-backtest.md
docs/specs/: 2026-03-13-resilient-backtest-design.md
prompts/agents/: cio.md  energy.md  macro_regime.md  quality.md  rates_yield.md  risk_officer.md  tech_semi.md  volatility.md
results/: elenchus_returns.csv  vanilla_checkpoint.json
results/19day_backup/: vanilla_returns.csv
results_elenchus/: elenchus_checkpoint.json
scripts/: cron_paper.sh  run.py  run_monitored.sh  run_paper.py  signal_notify.py
src/: __init__.py  agent.py  autoresearch.py  elenchus.py  ledger.py  llm.py  market_data.py  paper.py  pipeline.py  portfolio.py
tests/: test_ledger.py  test_market_data_live.py  test_paper.py  test_pipeline_async.py  test_signal_notify.py
tests/elenchus/: test_async_probe.py  test_integrity.py
